crates/tests/fixtures/harness/data/error/delegate_out_with_args/input.rdl

#[winrt]
mod Test {
    delegate fn Handler(#[out(42)] output: i32);
}
        